# SGD-Demo

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  sgd-regression.py  sgd-torch.py
