[project]
name = "sgd"
version = "0.1.0"
description = "Stochastic Gradient Descent Demo"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "pyqt6>=6.8.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
]
